@@ -1296,3 +1296,4 @@ ocrrendres = Rendering res.
 barcoderendres = Rendering res. (barcodes)
 workflowstatus = Workflow Status
 straight = Straight
+moveask = Are you sure you want to move <b>{0}</b> to <b>{1}</b>?
