@@ -918,6 +918,7 @@ feature.Feature_66 = Duplicates Discovery
 feature.Feature_67 = Repository Compression
 feature.Feature_68 = Advanced OCR
 feature.Feature_69 = CSV Export
+feature.Feature_70 = Retention Policies
 licensevalid = The license is valid
 licenseinvalid = The license is not valid
 activationfailed = Unable to activate. If the problem persists, try with the email activation.
@@ -1296,3 +1297,8 @@ ocrrendres = Rendering res.
 barcoderendres = Rendering res. (barcodes)
 workflowstatus = Workflow Status
 straight = Straight
+publishing = Publishing
+startpublishing = Start publishing
+stoppublishing = Stop publishing
+published = Published
+moveask = Are you sure you want to move <b>{0}</b> to <b>{1}</b>?
